Source/WebCore: Patch by Swapna P <spottabathini@innominds.com> on 2012-02-04 Reviewed by Antonio Gomes.

Bug: iframe with scrolling=no incorrectly autoscrollable
https://bugs.webkit.org/show_bug.cgi?id=61558

Added check for frame scrolling mode just before applying scroll on frame content in function RenderLayer::scrollRect

Testcase: LayoutTests/fast/events/autoscroll-with-non-scrollable-parent.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollRectToVisible):

LayoutTests: Patch by Swapna P <spottabathini@innominds.com> on 2012-02-04
Reviewed by Antonio Gomes.

Bug: iframe with scrolling=no incorrectly autoscrollable
https://bugs.webkit.org/show_bug.cgi?id=61558

Did change inorder to print correct log as per the description provided in test case.

* fast/events/autoscroll-with-non-scrollable-parent.html:

Canonical link: https://commits.webkit.org/94665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106730 268f45cc-cd09-0410-ab3c-d52691b4dbfc